# PyPOW

./: README.md  RunConversion.bat  __init__.py  brian_toby_XRDML_GSAS_reader.py  import_module.py  lab.py  pyproject.toml  requirements.txt  run_XY_conversion.py  working_example.py
.github/workflows/: python-app.yml  python-publish.yml
src/PyPOW/: __init__.py  __main__.py  import_module.py
tests/: ASG1_1.XRDML  ASG1_1.csv  ASG1_1.gsas  ASG1_1.xy  test___main__.py  test_import_module.py  working_example.py
