[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm[simple]>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPowder"
dynamic = ["version"]
maintainers = [
  { name="Diogo Almeida", email="dafda1@st-andrews.ac.uk" },
]
authors = [
  { name="Diogo Almeida" },
  { name="Max Pelly" },
]
description = "Attempt at constructing a set of tools to convert XRDML files to a more usable format."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"pandas",
	"numpy",
	"xmltodict"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/dafda1/PyPOW"
Issues = "https://github.com/dafda1/PyPOW/issues"

[project.scripts]
PyPOW = "PyPOW.__main__:convert_files"

[tool.setuptools_scm]
version_file = "src/PyPOW/__version__.py"
